<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        android:id="@+id/statusBar"
        layout="@layout/status_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_alignParentTop="true"
        app:layout_heightPercent="10%"/>

    <EditText
        android:id="@+id/userPhoneEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:background="@drawable/login_input_bg"
        android:gravity="left|center"
        android:hint="@string/userPhone"
        android:inputType="number"
        android:paddingLeft="@dimen/ten_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"
        app:layout_marginTopPercent="20%h"/>

    <EditText
        android:id="@+id/newPassWordEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@drawable/login_input_bg"
        android:gravity="left|center"
        android:hint="@string/newPassWord"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/ten_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"/>

    <EditText
        android:id="@+id/confirmNewPassWordEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@drawable/login_input_bg"
        android:gravity="left|center"
        android:hint="@string/confirmPassWordEdt"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/ten_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <EditText
            android:id="@+id/smsCodeEdt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/login_input_bg"
            android:gravity="left|center"
            android:hint="@string/smsCode"
            android:inputType="number"
            android:paddingLeft="@dimen/ten_dp"/>

        <Button
            android:id="@+id/sendSmsCodeBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:gravity="center"
            android:text="@string/sendSmsCode"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/modifyPassWordBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/twenty_dp"
        android:background="@drawable/blue_btn"
        android:text="@string/modifyPassWord"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/twenty_sp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"/>

</com.zhy.android.percent.support.PercentLinearLayout>
