<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <com.liji.circleimageview.CircleImageView
        android:id="@+id/userHeadIv"
        android:layout_width="@dimen/one_hundred_dp"
        android:layout_height="@dimen/one_hundred_dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        app:circle_border_color="@color/colorWhite"
        app:circle_border_width="@dimen/one_dp"
        app:layout_marginBottomPercent="10%"
        app:layout_marginTopPercent="10%"/>

    <EditText
        android:id="@+id/userNameEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/login_input_bg"
        android:gravity="left|center"
        android:hint="@string/userPhone"
        android:inputType="number"
        android:paddingLeft="@dimen/ten_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"/>

    <EditText
        android:id="@+id/passwordEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/login_input_bg"
        android:gravity="left|center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/ten_dp"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/forty_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:orientation="horizontal"
        app:layout_marginLeftPercent="10%"
        app:layout_marginRightPercent="10%">

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_sp"/>


        <Button
            android:id="@+id/registeredBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/five_dp"
            android:layout_weight="1"
            android:background="@drawable/blue_btn"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_sp"/>
    </LinearLayout>

    <com.zhy.android.percent.support.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/forgetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:text="@string/forgetPassword"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/twenty_sp"
            app:layout_marginPercent="10%w"/>
    </com.zhy.android.percent.support.PercentRelativeLayout>

</com.zhy.android.percent.support.PercentLinearLayout>
